--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,3 @@
-rootProject.name = 'kotlintlv-nitrite-demos'
-include 'benchmarks'
+rootProject.name = 'kotlintlv-nitrite-demo'
+include 'benchmarks', 'minimal'
 
