--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,3 @@
 rootProject.name = 'kotlintlv-nitrite-demo'
-include 'benchmarks', 'minimal'
+include 'benchmarks', 'minimal-setup', 'simple-indices'
 
