--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,3 @@
 rootProject.name = 'kotlintlv-nitrite-demo'
-include 'benchmarks', 'minimal-setup', 'simple-indices', 'multiple-indices'
+include 'benchmarks', 'minimal-setup', 'simple-indices', 'multiple-indices', 'partial-updates','projected-types'
 
