--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,9 @@
 rootProject.name = 'kotlintlv-nitrite-demo'
-include 'benchmarks', 'minimal-setup', 'simple-indices', 'multiple-indices', 'partial-updates','projected-types'
+include 'benchmarks',
+        'minimal-setup',
+        'simple-indices',
+        'multiple-indices',
+        'partial-updates',
+        'projected-types',
+        'event-listeners'
 
